add ability to mark day as vacation

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -10,7 +10,9 @@
         "placeholder": {
             "worklogSummary": "Not filled in",
             "daySummary": "Nameless day"
-        }
+        },
+        "weekend": "Weekend",
+        "vacation": "Vacation"
     },
     "time": {
         "shortHour": "h",
