--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -10,7 +10,9 @@
         "placeholder": {
             "worklogSummary": "Не заполнено",
             "daySummary": "Безымянный день"
-        }
+        },
+        "weekend": "Выходной день",
+        "vacation": "Отпуск"
     },
     "time": {
         "shortHour": "ч",
