--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -83,6 +83,12 @@
         "language": {
             "title": "Настройки языка"
         },
+        "workSince": {
+            "title": "Первый рабочий день",
+            "currentValue": "Сейчас все дни нумеруются от {currentDay}",
+            "default": "Укажите дату Вашего первого рабочего дня, чтобы система смогла пронумеровать все ваши отработанные дни",
+            "submitButton": "Пересчитать"
+        },
         "jira": {
             "title": "Подключение к Jira",
             "form": {
