add new 'duty' type of task and do not count it in progress bar

--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -172,6 +172,7 @@
         "CLUBS_AND_EVENTS": "Clubes y eventos",
         "ORGANIZING_ACTIVITIES": "Actividades de organización",
         "INTERVIEWS": "Entrevistas",
-        "ABSENCES": "Ausencias"
+        "ABSENCES": "Ausencias",
+        "DUTY": "Guardia"
     }
 }
