--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -172,6 +172,7 @@
         "CLUBS_AND_EVENTS": "Клубы и мероприятия",
         "ORGANIZING_ACTIVITIES": "Орг. деятельность",
         "INTERVIEWS": "Собеседования",
-        "ABSENCES": "Отсутствия"
+        "ABSENCES": "Отсутствия",
+        "DUTY": "Дежурство"
     }
 }
