--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -174,6 +174,7 @@
         "CLUBS_AND_EVENTS": "Clubs and events",
         "ORGANIZING_ACTIVITIES": "Organizing activities",
         "INTERVIEWS": "Interviews",
-        "ABSENCES": "Absences"
+        "ABSENCES": "Absences",
+        "DUTY": "Duty"
     }
 }
